--- a/nr/applicants/templates/applicants/index.html
+++ b/nr/applicants/templates/applicants/index.html
@@ -3,25 +3,32 @@
 {% load url from future %}
 {% load humanize %}
 {% load widget_tweaks %}
+{% load mathfilters %}
+{% load get_range %}
 
 {% block content_title %}{% trans 'Applicants' %}{% endblock %}
 
 {% block content %}
+
+<div id="list_applicants">
+	<a class="btn btn-info" href="#"><i class="icon-book icon-white"></i> List of Applicants</a>
+	<a class="btn btn-info" href="#"><i class="icon-plus icon-white"></i> New Applicant</a> 
+	<a class="btn btn-info" href="#"><i class="icon-download-alt icon-white"></i> Download Applicant Data</a>
+	
 {% if applicant_list %}
-{% if is_paginated %}
+{% if is_paginated %}	
 	<div class="grid_24">
-  	{% include 'applicants/pagination.html' %}
-    </div>
+		{% include 'applicants/pagination.html' %}
+	</div>
 {% endif %}
-<table class="package_list">
-	{% include "applicants/applicant_heading_snippet.html" %}
-	{% for applicant in applicant_list %}
-		{% include "applicants/applicant_detail_row_snippet.html" %}
-	{% endfor %}
-</table>
-	{% else %}
+	<table class="table table-bordered table-striped">
+		{% include "applicants/applicant_heading_snippet.html" %}
+		{% for applicant in applicant_list %}
+			{% include "applicants/applicant_detail_row_snippet.html" %}
+		{% endfor %}
+	</table>
+{% else %}
 		<p>{% trans 'No applicants.' %}</p>
-	{% endif %}
+{% endif %}
 
 {% endblock %}
-<!-- of {{ page_obj.paginator.num_pages }}. -->
