--- a/nr/templates/userena/profile_form.html
+++ b/nr/templates/userena/profile_form.html
@@ -4,7 +4,7 @@
 
 {% block title %}{% trans "Account setup" %}{% endblock %}
 {% block subtitle %}{% endblock %}
-{% block main_content %}
+{% block content %}
 	<div class="row pull-left">
 		<div class="col-lg-3">
 			<div class="thumbnail">
