change list_applicants to list submenu

--- a/nr/applicants/templates/applicants/index.html
+++ b/nr/applicants/templates/applicants/index.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<div id="list_applicants">
+<div id="list_submenu">
 	<a class="btn btn-info" href="#"><i class="icon-book icon-white"></i> List of Applicants</a>
 	<a class="btn btn-info" href="#"><i class="icon-plus icon-white"></i> New Applicant</a> 
 	<a class="btn btn-info" href="#"><i class="icon-download-alt icon-white"></i> Download Applicant Data</a>
