--- a/nr/static_localstaticfiles/css/style.css
+++ b/nr/static_localstaticfiles/css/style.css
@@ -138,11 +138,11 @@
 	width:300px;
 }
 
-#list_applicants {
+#list_submenu {
 	height:500px;
 }
 
-#list_applicants .table {
+#list_submenu .table {
 	margin-top:25px;
 }
 
