--- a/nr/templates/userena/email_form.html
+++ b/nr/templates/userena/email_form.html
@@ -5,9 +5,18 @@
 {% block content_title %}<h2>{% blocktrans with user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
 
 {% block content %}
+<div class="row pull-left">
+  <div class="col-lg-3">
+    <div class="thumbnail">
+      <img src="/css/images/profile.jpg" style="width: 300px; height: 200px;">
+    </div>
+   </div>
+</div>
+
 <form class="userena" action="" method="post">
   {% csrf_token %}
-    <h1>{% trans "Change email address" %}</h1>
+ <div id="edit_form" class="pull-right">
+ 	<legend><b>{% trans "Change Email" %}</b></legend>
     {{ form.as_p }}
   <input type="submit" value="{% trans "Change email" %}" />
 </form>
