--- a/nr/templates/userena/password_form.html
+++ b/nr/templates/userena/password_form.html
@@ -7,8 +7,17 @@
 {% block content_title %}<h2>{% blocktrans with user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
 
 {% block content %}
+<div class="row pull-left">
+  <div class="col-lg-3">
+    <div class="thumbnail">
+      <img src="/css/images/profile.jpg" style="width: 300px; height: 200px;">
+    </div>
+   </div>
+</div>
+
 <form class="userena" action="" method="post" id="password_change_form">
-    <h1>{% trans "Change Password" %}</h1>
+<div id="edit_form" class="pull-right">
+ 	<legend><b>{% trans "Change Password" %}</b></legend>
     {% csrf_token %}
     {{ form.as_p }}
   <input type="submit" value="{% trans "Change password" %}" />
