--- a/nr/templates/base.html
+++ b/nr/templates/base.html
@@ -24,7 +24,12 @@
 				<div id="header_left" class="pull-left">
 					<h1 class="pull-left"> Socialassistanceregisrty.com</h1>
 					{% block subtitle %}
-					<h4>{% trans 'Application intake software' %}</h4>{% endblock %}
+						{% if user.is_authenticated %}
+						<span></span>
+						{% else %}
+						<h4>{% trans 'Application intake software' %}</h4>
+						{% endif %}
+					{% endblock %}
 					<div class="clearfix"></div>
 				</div>
 				
@@ -72,7 +77,23 @@
 			</div>
 		</div>
 		
-		
+		{% if user.is_authenticated %}
+		<div id="header_nav_holder">
+			<div class="navbar">
+			 	<div class="navbar-inner">
+			 		<div id="header_nav">
+				    	<ul class="nav">
+				      		<!--li class="active"></li-->
+				      		<li><a href="#"><i class="icon-home"></i> Home</a></li>
+							<li><a href="#"><i class="icon-file"></i> Registry Applications</a></li>
+				    	</ul>
+			    	</div>
+			  	</div>
+				<div class="clearfix"></div>
+			</div>
+		</div>	
+		{% endif %}
+
 		<div id="main_content_holder">
 			<div id="main_content">
 		        <div id="list_submenu">
