--- a/nr/templates/userena/email_form.html
+++ b/nr/templates/userena/email_form.html
@@ -1,6 +1,7 @@
 {% extends 'userena/base_userena.html' %}
 {% load i18n %}
 {% load url from future %}
+{% load staticfiles %}
 
 {% block content_title %}<h2>{% blocktrans with user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
 
@@ -8,7 +9,7 @@
 <div class="row pull-left">
   <div class="col-lg-3">
     <div class="thumbnail">
-      <img src="/css/images/profile.jpg" style="width: 300px; height: 200px;">
+      <img src="{% static "css/images/profile.jpg" %}" style="width: 300px; height: 200px;">
     </div>
    </div>
 </div>
