--- a/nr/templates/userena/profile_detail.html
+++ b/nr/templates/userena/profile_detail.html
@@ -1,6 +1,7 @@
 {% extends 'userena/base_userena.html' %}
 {% load i18n %}
 {% load url from future %}
+{% load staticfiles %}
 
 {% block title %}{% blocktrans with profile.user.username as username %}{{ username }}'s profile.{% endblocktrans %}{% endblock %}
 {% block content_title %}<h2>{{ profile.user.username }} {% if profile.user.get_full_name %}({{ profile.user.get_full_name }}){% endif %}</h2>{% endblock %}
@@ -11,7 +12,7 @@
 <div class="row pull-left">
   <div class="col-lg-3">
     <div class="thumbnail">
-      <img src="/css/images/profile.jpg" style="width: 300px; height: 200px;">
+      <img src="{% static "css/images/profile.jpg" %}" style="width: 300px; height: 200px;">
     </div>
    </div>
 </div>
