--- a/nr/templates/userena/profile_form.html
+++ b/nr/templates/userena/profile_form.html
@@ -1,6 +1,7 @@
 {% extends 'userena/base_userena.html' %}
 {% load i18n %}
 {% load url from future %}
+{% load staticfiles %}
 
 {% block title %}{% trans "Account setup" %}{% endblock %}
 
@@ -10,7 +11,7 @@
 <div class="row pull-left">
   <div class="col-lg-3">
     <div class="thumbnail">
-      <img src="/css/images/profile.jpg" style="width: 300px; height: 200px;">
+      <img src="{% static "css/images/profile.jpg" %}" style="width: 300px; height: 200px;">
     </div>
    </div>
 </div>
